--- a/Logistic Regression Advanced Case Study.ipynb
+++ b/Logistic Regression Advanced Case Study.ipynb
@@ -485,7 +485,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "pBJCDfOQHumy"
@@ -500,7 +500,8 @@
     "<li> For each C:\n",
     "  <ol>\n",
     "  <li> Create a logistic regression model with that value of C\n",
-    "  <li> Find the average score for this model using the `cv_score` function **only on the training set** `(Xlr, ylr)`\n",
+    "  <li> Find the average score for this model using the `cv_score` functi\n",
+    " on **only on the training set** `(Xlr, ylr)`\n",
     "  </ol>\n",
     "<li> Pick the C with the highest average score\n",
     "</ul>\n",
